Theme and Language switch without restart

--- a/Controls/AccountsListViewControl.xaml
+++ b/Controls/AccountsListViewControl.xaml
@@ -10,6 +10,7 @@
     xmlns:models="using:CryptoPortfolioTracker.Models"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:l="using:WinUI3Localizer"
     xmlns:ui="using:CommunityToolkit.WinUI"
     xmlns:toolkit="using:AK.Toolkit.WinUI3"
     mc:Ignorable="d">
@@ -43,15 +44,15 @@
             </Grid.ColumnDefinitions>
         <RichTextBlock   Grid.Row="0" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" >
             <Paragraph TextAlignment="Left" >
-                <Run x:Uid="AccountsLV_Name" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="AccountsLV_Name" FontSize="12" FontStyle="Italic" />
             </Paragraph>
             <Paragraph TextAlignment="Left">
-                <Run x:Uid="AccountsLV_Note" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="AccountsLV_Note" FontSize="12" FontStyle="Italic" />
             </Paragraph>
         </RichTextBlock>
         <RichTextBlock   Grid.Row="0" Grid.Column="1" Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Right" >
             <Paragraph TextAlignment="Right" >
-                <Run x:Uid="AccountsLV_MarketValue" FontSize="12" FontStyle="Italic" />
+                <Run l:Uids.Uid="AccountsLV_MarketValue" FontSize="12" FontStyle="Italic" />
             </Paragraph>
         </RichTextBlock>
         
@@ -97,10 +98,10 @@
                                         <CommandBar Name="HoverCommandBar" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=HoverCommandBar, Converter={StaticResource BoolToVisibilityConverter}}" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
                                             <CommandBar.SecondaryCommands>
                                                 <!-- Added dummy button to enforce showing the icons. without this dummy the Binding for the icon doesn't work-->
-                                                <AppBarButton x:Uid="AccountsLV_Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowAccountDialogToEditCommand, ElementName=proxy}"  CommandParameter="{x:Bind }">
+                                                <AppBarButton l:Uids.Uid="AccountsLV_Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowAccountDialogToEditCommand, ElementName=proxy}"  CommandParameter="{x:Bind }">
                                                     <FontIcon  Glyph="&#xE70B;" FontWeight="Normal"  />
                                                 </AppBarButton>
-                                                <AppBarButton x:Uid="AccountsLV_Delete" Icon="Delete"  x:Name="HoverButtonDel" Command="{Binding DataContext.DataContext.DeleteAccountCommand, ElementName=proxy}" CommandParameter="{x:Bind }"/>
+                                                <AppBarButton l:Uids.Uid="AccountsLV_Delete" Icon="Delete"  x:Name="HoverButtonDel" Command="{Binding DataContext.DataContext.DeleteAccountCommand, ElementName=proxy}" CommandParameter="{x:Bind }"/>
                                             </CommandBar.SecondaryCommands>
                                         </CommandBar>
                                     </RelativePanel>
