--- a/Dialogs/DescriptionDialog.xaml
+++ b/Dialogs/DescriptionDialog.xaml
@@ -6,6 +6,8 @@
     xmlns:local="using:CryptoPortfolioTracker"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
+    xmlns:l="using:WinUI3Localizer"
+    Loading="Dialog_Loading"
     DefaultButton="Close">
 
     <Grid>
