--- a/Dialogs/AccountDialog.xaml
+++ b/Dialogs/AccountDialog.xaml
@@ -3,9 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:local="using:CryptoPortfolioTracker" 
+    xmlns:l="using:WinUI3Localizer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     Title="Add a new Account"
-    
+    Loading="Dialog_Loading"
     DefaultButton="Primary"
     PrimaryButtonClick="Button_Click_AcceptAccount">
 
@@ -26,13 +27,13 @@
             <StackPanel.Background>
                 <SolidColorBrush Color ="#eebc3f" Opacity="0.1"/>
             </StackPanel.Background>
-            <TextBox x:Uid="AccountDialog_Name" x:Name="AccountNameText" PlaceholderForeground="Wheat" TextChanging="AccountName_TextChanging" Margin="10,0,10,0"></TextBox>
+            <TextBox l:Uids.Uid="AccountDialog_Name" x:Name="AccountNameText" PlaceholderForeground="Wheat" TextChanging="AccountName_TextChanging" Margin="10,0,10,0"></TextBox>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Margin="5,0,0,0" >
             <StackPanel.Background>
                 <SolidColorBrush Color ="#eebc3f" Opacity="0.1"/>
             </StackPanel.Background>
-            <TextBox x:Uid="AccountDialog_Description" PlaceholderForeground="Wheat" x:Name="DescriptionText" Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
+            <TextBox l:Uids.Uid="AccountDialog_Description" PlaceholderForeground="Wheat" x:Name="DescriptionText" Margin="10,0,10,0" AutomationProperties.Name="multi-line TextBox" 
                      TextWrapping="Wrap" AcceptsReturn="True" MinWidth="400" MinHeight="150">
             </TextBox>
         </StackPanel>
