--- a/Views/AccountsView.xaml
+++ b/Views/AccountsView.xaml
@@ -5,6 +5,7 @@
     xmlns:models="using:CryptoPortfolioTracker.Models"
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
+    xmlns:l="using:WinUI3Localizer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
@@ -36,9 +37,9 @@
             <RelativePanel>
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock x:Uid="Accounts_Title" x:Name="txtAccounts" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock l:Uids.Uid="Accounts_Title" x:Name="txtAccounts" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
             </RelativePanel>
-            <TextBlock x:Uid="Accounts_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"/>
+            <TextBlock l:Uids.Uid="Accounts_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"/>
             <Border Grid.Row="2" VerticalAlignment="Stretch" Margin="10,0,0,0">
                 <Grid Name="AccountsContent">
                     <Grid.RowDefinitions>
@@ -48,7 +49,7 @@
                     </Grid.RowDefinitions>
                     <controls:AccountsListViewControl x:Name="MyAccountsListViewControl" x:FieldModifier="public" Grid.Row="0" />
                     <controls:AssetsListViewControl x:Name="MyAssetsListViewControl" x:FieldModifier="public" Grid.Row="1" Margin="0,-8,0,0" />
-                    <Button x:Uid="Accounts_AddAccount" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
+                    <Button l:Uids.Uid="Accounts_AddAccount" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
                         Command="{Binding ShowAccountDialogToAddCommand}" Name="AddAccountButton" Margin="10,10,0,0"/>
                 </Grid>
             </Border>
