--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -5,6 +5,7 @@
     xmlns:models="using:CryptoPortfolioTracker.Models"
     xmlns:helpers="using:CryptoPortfolioTracker.Helpers"
     xmlns:enums="using:CryptoPortfolioTracker.Enums"
+    xmlns:l="using:WinUI3Localizer"
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -42,7 +43,7 @@
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 
-                <TextBlock x:Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock l:Uids.Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
                 <TextBlock Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtAssets" />
                 <!--Grid HorizontalAlignment="Right" Width="{Binding ElementName=HeaderGrid,Path=ActualWidth}" Margin="0,10,0,0"-->
                     <RelativePanel RelativePanel.AlignRightWithPanel="True">
@@ -51,7 +52,7 @@
                     </RelativePanel>
                 <!--/Grid-->
             </RelativePanel>
-            <TextBlock x:Uid="Assets_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Margin="35,0,20,20" Style="{StaticResource ExplainerTextStyle}"   TextWrapping="Wrap" />
+            <TextBlock l:Uids.Uid="Assets_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Margin="35,0,20,20" Style="{StaticResource ExplainerTextStyle}"   TextWrapping="Wrap" />
             <Border Grid.Row="2" VerticalAlignment="Stretch">
                 <Grid Name="AssetsContent">
                     <Grid.RowDefinitions>
@@ -63,7 +64,7 @@
                     <controls:AssetsListViewControl x:Name="MyAssetsListViewControl" x:FieldModifier="public" Margin="0,0,0,0" Grid.Row="0"  />
                     <controls:AssetAccountsGridViewControl x:Name="MyAssetAccountsGridViewControl" x:FieldModifier="public" Margin="0,-7,0,0" Grid.Row="1" />
                     <controls:AssetTransactionsListViewControl x:Name="MyAssetTransactionsListViewControl" x:FieldModifier="public"  Margin="0,-5,0,0" Grid.Row="2" />
-                    <Button x:Uid="Assets_TransactionButton" Visibility="Visible" HorizontalAlignment="Stretch" Margin="10,10,0,0" Grid.Row="3"
+                    <Button l:Uids.Uid="Assets_TransactionButton" Visibility="Visible" HorizontalAlignment="Stretch" Margin="10,10,0,0" Grid.Row="3"
                             Command="{Binding ShowTransactionDialogToAddCommand}"/>
                 </Grid>
             </Border>
