--- a/Views/CoinLibraryView.xaml
+++ b/Views/CoinLibraryView.xaml
@@ -6,6 +6,7 @@
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:l="using:WinUI3Localizer"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
    
@@ -36,10 +37,10 @@
             <RelativePanel>
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock x:Uid="Library_Title" x:Name="txtCoinLibrary" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock l:Uids.Uid="Library_Title" x:Name="txtCoinLibrary" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
                 <TextBlock Text="{Binding ListCoins.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtCoinLibrary" />
             </RelativePanel>
-            <TextBlock x:Uid="Library_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"> </TextBlock>
+            <TextBlock l:Uids.Uid="Library_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"> </TextBlock>
             <Border Grid.Row="2" VerticalAlignment="Stretch" >
                 <Grid Name="LibraryContent" >
                     <Grid.RowDefinitions>
@@ -47,7 +48,7 @@
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
                     <controls:CoinLibraryListViewControl x:Name="MyCoinLibraryListViewControl" x:FieldModifier="public" Grid.Row="0" />
-                    <Button x:Uid="Library_AddCoin" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
+                    <Button l:Uids.Uid="Library_AddCoin" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" 
                             Command="{Binding ShowAddCoinDialogCommand}" Name="AddCoinButton" Margin="10,10,0,0"/>
                 </Grid>
             </Border>
