--- a/Views/HelpView.xaml
+++ b/Views/HelpView.xaml
@@ -7,6 +7,7 @@
     xmlns:converters="using:CryptoPortfolioTracker.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:l="using:WinUI3Localizer"
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
     d:DataContext="{d:DesignInstance Type=viewmodels:HelpViewModel}"
     mc:Ignorable="d">
